[B]Retrospect v4.1.8.13 - Changelog - 2019-04-08[/B]

!! Due to the changing of the add-on ID, there is an extra add-on data migration step required. This happens as soon as you install the new version. !!

[B]Framework related[/B]
-

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Fixed: NPO video would now show in some occasions.