@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon  id="plugin.video.retrospect"
-        version="4.1.8.13"
+        version="4.1.8.14"
         name="Retrospect"
         provider-name="Bas Rieter">
 
@@ -117,7 +117,7 @@
         <description lang="en">Retrospect uses the official websites of a lot of different broadcasting companies (mainly Dutch, Belgian, British and Swedish) to make their re-run episodes available on the Kodi platform. More information can be found at www.rieter.net.[CR][CR]Retrospect reports back usage statistics to our servers. This option can be disabled from the add-on settings.</description>
         <disclaimer lang="en">Retrospect is provided as is. We do not take any responsibility for possible (but highly unlikely) damage cause to your system. Nor do we take responsibility for the content that can be watched via this add-on.</disclaimer>
         <language>en nl de se no lt lv fi</language>
-        <news>[B]Retrospect v4.1.8.13 - Changelog - 2019-04-08[/B]
+        <news>[B]Retrospect v4.1.8.14 - Changelog - 2019-04-17[/B]
 
 !! Due to the changing of the add-on ID, there is an extra add-on data migration step required. This happens as soon as you install the new version. !!
 
@@ -128,8 +128,10 @@
 -
 
 [B]Channel related[/B]
-* Fixed: NPO video would now show in some occasions.
-
+* Fixed: some SVT streams had a very low bitrate or had weird audio (Fixes #1150)
+* Fixed: SVT Genres (Fixes #1149)
+* Fixed: naming of Radio NL (Fixes #1147)
+* Changed: cache radio data in the profile cache folder
         </news>
         <assets>
             <icon>icon.png</icon>
